update footer style

--- a/_posts/2016-03-29-Retrofit的使用.md
+++ b/_posts/2016-03-29-Retrofit的使用.md
@@ -198,4 +198,4 @@ tags:
     .addConverterFactory(ProtoConverterFactory.create())
     .build();
   ```
-  设置了一个Gson转换器和一个Proto转换器，按照配置的顺序，Retrofit会依次询问每个converter能否处理数据，只能数据被处理了或试过了所有的转换器。
+  设置了一个Gson转换器和一个Proto转换器，按照配置的顺序，Retrofit会依次询问每个converter能否处理数据，直到数据被处理了或试过了所有的转换器。
